fix: MudSelect popover not showing

--- a/Sample.Wasm/wwwroot/css/app.css
+++ b/Sample.Wasm/wwwroot/css/app.css
@@ -1,3 +1,9 @@
+:root {
+    /* workaround for https://github.com/MudBlazor/MudBlazor/issues/12675 - see MainLayout theme for values */
+    --mud-zindex-appbar: 1300;
+    --mud-zindex-popover: 1500;
+}
+
 #blazor-error-ui {
     color-scheme: light only;
     background: lightyellow;
